--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-    "name": "cappstone-proj",
+    "name": "cappstone",
     "engines": {
-      "node": "8.9.0"
+      "node": "9.4.0"
     },
     "scripts": {
       "build": "cd client && npm install && npm run build && cd ..",
       "deploy": "cp -a client/build/. public/",
       "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
+    },
+    "dependencies": {
+      "axios": "^0.17.1"
     }
   }
